--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- build:css /css/style.min.css -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/xeditable.css">
     <!-- endbuild -->
 </head>
 <body ng-controller="AppCtrl">
@@ -25,6 +26,7 @@
 <script type="text/javascript" src="/vendor/angular-sanitize.js"></script>
 <script type="text/javascript" src="/vendor/angular-touch.js"></script>
 <script type="text/javascript" src="/vendor/moment.js"></script>
+<script type="text/javascript" src="/vendor/xeditable.js"></script>
 
 <script type="text/javascript" src="/app.js"></script>
 <!-- endbuild -->
